--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto p-5 mb-2 mb-lg-0 d-flex justify-content-space-around">
+                    <ul class="navbar-nav me-auto p-5 mb-2 mb-lg-0 d-flex justify-content-around">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="index.html">Conversor</a>
                         </li>
