--- a/pages/tabla.html
+++ b/pages/tabla.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- favicon -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../favicon.ico" type="image/x-icon">
 
     <!-- CSS de BT -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
     <!-- link CSS -->
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     
     <title>Divisas</title>
     <meta name="description" content="Conversor de moneda, cambio de divisas y convertidor para dólares, euros, pesos y otras monedas.">
@@ -25,19 +25,19 @@
     <header>
         <nav class="navbar navbar-expand-lg justify-content-center color-menu">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">
-                    <img src="./img/ms-icon-70x70.png" alt="logo ">
+                <a class="navbar-brand" href="../index.html">
+                    <img src="../img/ms-icon-70x70.png" alt="logo ">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto p-5 mb-2 mb-lg-0 d-flex justify-content-around">
+                    <ul class="navbar-nav me-auto p-5 mb-2 mb-lg-0 d-flex justify-content-between">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Conversor</a>
+                            <a class="nav-link active" aria-current="page" href="../index.html">Conversor</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/tabla.html">Tabla de Cambios</a>
+                            <a class="nav-link" href="../pages/tabla.html">Tabla de Cambios</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="">Envios</a>
@@ -50,11 +50,11 @@
     <main class="container color-fondo m-3">
         <div class="row">
             <div class="col-xs-12 col-md-6">
-                <img src="./img/cover-divisas-900-470.jpg" class="imgDivisas" alt="imagen Divisas">
+                <img src="../img/cover-tipos-mercado-900-470.jpg" class="imgDivisas" alt="imagen Tipo de Mercado">
             </div>
             <form class="col-xs-12 col-md-6" id="form" name="form">
                 <div class="row">
-                    <h1>Conversor de Divisas</h1>
+                    <h1>Tabla de Cambio</h1>
                     <div class="col-md-12 col-sm-12 col-xs-12">
                         <label class="form-label" for="">Cantidad</label>
                         <input id="formCantidad" class="formCantidad" type="number" inputmode="decimal" pattern="[0-9\.',]*">
@@ -85,24 +85,10 @@
             </form>
         </div>
         <div class="row">
-            <h2>Nuestro conversor de moneda</h2>
-            <p>Con nuestro único conversor de monedas puedes rápidamente y fácilmente convertir divisas con muchas ventajas a: todas las divisas del mundo, precio del oro y Bitcoin. Actualizaciones de las tasas de cambio cada 5 minutos. Historial de información financiera de los últimos 15 años. Rápido y confortable como una aplicación móvil. Características adicionales como un historial de cambio, copiar el resultado o invertir una conversión. Gráfico interactivo. Practicas tablas de conversión directamente a tu móvil o con posibilidad de imprimirlas como Guía de Bolsillo para tus viajes de vacaciones o negocios.</p>
-        </div>
-        <div class="row">
-            <h2>Múltiple convertidor de divisas y tabla de cambios</h2>
-            <p>¿Te gustaría convertir una cantidad a múltiples monedas al mismo tiempo? ¿O estas buscando una típica tabla de cambio flexible con muchas divisas? Entonces debes echar un vistazo a nuestra única e interactiva tabla de cambios.
-            </p>
-        </div>
-        <div class="row">
-            <h2>Envía dinero a todo el mundo y ahorra en la transferencia</h2>
-            <p>Cada vez más seguido particulares y empresas envían dinero al extranjero usando proveedores especializados en remesas. Transfiriendo de esta manera les permite ahorrar mucho más dinero comparado con las transferencias bancarias o las comisiones de envió de dinero por tarjeta de crédito. ¿Te gustaría saber cuál es el mejor proveedor para tu transferencia internacional? Entonces visita nuestro comparador en tiempo real de envió de dinero y encuentra las mejores ofertas incluyendo promociones especiales.</p>
-        </div>
-        <div class="row">
-            <h2>Información</h2>
-            <p>Nuestro convertidor de moneda (conversor de divisas) y nuestras otras herramientas pueden asistirle en muchas situaciones como referencia adicional (compras en línea, reservar hoteles, convertir monedas extranjeras, mercado FOREX / FX, comercio internacional, mercado de valores y fondo de inversión, comparador de créditos, verificar el resumen de la tarjeta de crédito y en muchos otros casos). Igualmente por favor lee antes nuestros términos.</p>
+            <h2>Bla Bla Bla..</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit iste at recusandae distinctio molestiae quibusdam quia dicta aut dolor exercitationem, rem odio atque unde excepturi? Sit culpa laborum magnam reiciendis!</p>
         </div>
         
-
     </main>
     <footer>
         <div class="footer-section">
