--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg justify-content-center color-menu">
+        <nav class="navbar navbar-expand-lg d-flex justify-content-between color-menu">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
                     <img src="./img/ms-icon-70x70.png" alt="logo ">
@@ -32,7 +32,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto p-5 mb-2 mb-lg-0 d-flex justify-content-around">
+                    <ul class="navbar-nav me-auto p-5 mb-2 mb-lg-0 d-flex justify-content-between">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="index.html">Conversor</a>
                         </li>
