--- a/pages/tabla.html
+++ b/pages/tabla.html
@@ -59,23 +59,23 @@
                         <label class="form-label" for="">Cantidad</label>
                         <input id="formCantidad" class="formCantidad" type="number" inputmode="decimal" pattern="[0-9\.',]*">
                     </div>
-                    <div class="col-md-4 col-sm-5 col-xs-10">
+                    <!-- <div class="col-md-4 col-sm-5 col-xs-10">
                         <label class="form-label" for="">De la Divisa</label>
                         <select id="formDivisas1"  aria-labelledby="divisas1">
-                                <!-- Selector por Script -->
+                                Selector por Script
                         </select>
                     </div>
                     <div class="col.md-4 col-sm-2 col-xs-2">
                         <button type="button" id="formBtn" class="btn btn-secondary btn-swap"><i class="bi bi-arrow-down-up"></i>
-                            <!-- <img id="formBtn" class="btn btn-secondary btn-swap" src="img/ms-icon-70x70.png" alt="Intercambio">     -->
+                            <img id="formBtn" class="btn btn-secondary btn-swap" src="img/ms-icon-70x70.png" alt="Intercambio">    
                         </button>
                     </div>
                     <div class="col-md-4 col-sm-5 col-xs-10">
                         <label class="form-label" for="">A la Divisa</label>
                         <select id="formDivisas2" aria-labelledby="divisas2">
-                            <!-- Selector por Script -->
+                            Selector por Script
                         </select>
-                    </div>
+                    </div> -->
                     
                     <!-- Acá se van a mostrar las cotizaciones -->
                     <div id="contenedor" class="row">
@@ -105,6 +105,7 @@
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script> 
     
-    <script src="js/script.js"></script>
+    <script src="../js/tabla.js"></script>
+    <!-- <script src="../js/script.js"></script> -->
 </body>
 </html>
