--- a/pages/tabla.html
+++ b/pages/tabla.html
@@ -85,8 +85,8 @@
             </form>
         </div>
         <div class="row">
-            <h2>Bla Bla Bla..</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit iste at recusandae distinctio molestiae quibusdam quia dicta aut dolor exercitationem, rem odio atque unde excepturi? Sit culpa laborum magnam reiciendis!</p>
+            <h2>Multiple Conversor de Cambios</h2>
+            <p>Si.. todos al mismo tiempo!!!, estas buscando una típica tabla de cambio flexible con muchas divisas, Entonces debes echar un vistazo a nuestra única e interactiva tabla de cambios.</p>
         </div>
         
     </main>
