--- a/pages/tabla.html
+++ b/pages/tabla.html
@@ -55,30 +55,22 @@
             <form class="col-xs-12 col-md-6" id="form" name="form">
                 <div class="row">
                     <h1>Tabla de Cambio</h1>
-                    <div class="col-md-12 col-sm-12 col-xs-12">
+                    <div class="col-md-8 col-sm-8 col-xs-12">
                         <label class="form-label" for="">Cantidad</label>
                         <input id="formCantidad" class="formCantidad" type="number" inputmode="decimal" pattern="[0-9\.',]*">
                     </div>
-                    <!-- <div class="col-md-4 col-sm-5 col-xs-10">
-                        <label class="form-label" for="">De la Divisa</label>
-                        <select id="formDivisas1"  aria-labelledby="divisas1">
-                                Selector por Script
-                        </select>
-                    </div>
-                    <div class="col.md-4 col-sm-2 col-xs-2">
-                        <button type="button" id="formBtn" class="btn btn-secondary btn-swap"><i class="bi bi-arrow-down-up"></i>
-                            <img id="formBtn" class="btn btn-secondary btn-swap" src="img/ms-icon-70x70.png" alt="Intercambio">    
+                    <!-- <div class="col-md-2 col-sm-2 col-xs-2">
+                        <button type="button" id="formBtn" class="btn btn-secondary btn-swap">
+                            <i class="bi bi-arrow-down-up"></i>
                         </button>
                     </div>
-                    <div class="col-md-4 col-sm-5 col-xs-10">
-                        <label class="form-label" for="">A la Divisa</label>
-                        <select id="formDivisas2" aria-labelledby="divisas2">
-                            Selector por Script
-                        </select>
-                    </div> -->
-                    
+                    <div class="col-md-2 col-sm-2 col-xs-2">
+                        <button type="button" id="formBtn" class="btn btn-secondary btn-swap">
+                            <i class="bi bi-arrow-down-up"></i>
+                        </button>
+                    </div>                  -->
                     <!-- Acá se van a mostrar las cotizaciones -->
-                    <div id="contenedor" class="row">
+                    <div id="contenedor" >
                         <div id="exchange" style="text-align: start"></div>
                     </div>
                 </div>
@@ -86,18 +78,17 @@
         </div>
         <div class="row">
             <h2>Multiple Conversor de Cambios</h2>
-            <p>Si.. todos al mismo tiempo!!!, estas buscando una típica tabla de cambio flexible con muchas divisas, Entonces debes echar un vistazo a nuestra única e interactiva tabla de cambios.</p>
+            <p>Si.. todos al mismo tiempo!!!, estas buscando una tabla de cambio flexible con muchas divisas, Entonces debes echar un vistazo a nuestra única tabla de cambios.</p>
         </div>
         
     </main>
     <footer>
         <div class="footer-section">
-            <!-- <p class="footer-links">
-                <a class="active-link" href="index.html">Conversor</a>
-                <a href="">Tabla de Cambios</a>
+            <p class="footer-links">
+                <a class="active-link" href="../index.html">Conversor</a>
+                <a href="./tabla.html">Tabla de Cambios</a>
                 <a href="">Envios</a>
-                <a href="">Contacto</a>
-            </p> -->
+            </p>
             <p>© 2023 Copyright: All right Reserved - Carolina Contreras</p>
         </div>
     </footer>    
