grabando PF parcial

--- a/pages/tabla.html
+++ b/pages/tabla.html
@@ -59,16 +59,16 @@
                         <label class="form-label" for="">Cantidad</label>
                         <input id="formCantidad" class="formCantidad" type="number" inputmode="decimal" pattern="[0-9\.',]*">
                     </div>
+                    <div class="col-md-2 col-sm-2 col-xs-2">
+                        <button type="button" id="formBtn" class="btn btn-swap">
+                            <i class="bi bi-envelope-fill"></i>
+                        </button>
+                    </div>
                     <!-- <div class="col-md-2 col-sm-2 col-xs-2">
                         <button type="button" id="formBtn" class="btn btn-secondary btn-swap">
                             <i class="bi bi-arrow-down-up"></i>
                         </button>
-                    </div>
-                    <div class="col-md-2 col-sm-2 col-xs-2">
-                        <button type="button" id="formBtn" class="btn btn-secondary btn-swap">
-                            <i class="bi bi-arrow-down-up"></i>
-                        </button>
-                    </div>                  -->
+                    </div> -->
                     <!-- Acá se van a mostrar las cotizaciones -->
                     <div id="contenedor" >
                         <div id="exchange" style="text-align: start"></div>
