--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
     <!-- BT icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
+    <!-- Toastify -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+
     <!-- link CSS -->
     <link rel="stylesheet" href="./css/style.css">
     
-    <title>Divisas</title>
+    <title>Conversor de Divisas</title>
     <meta name="description" content="Conversor de moneda, cambio de divisas y convertidor para dólares, euros, pesos y otras monedas.">
     <meta name="keywords" content="conversor, convertidor, cambio, moneda, divisas, dolares, euros, pesos">
 </head>
@@ -57,7 +60,7 @@
                     <h1>Conversor de Divisas</h1>
                     <div class="col-md-12 col-sm-12 col-xs-12">
                         <label class="form-label" for="">Cantidad</label>
-                        <input id="formCantidad" class="formCantidad" type="number" inputmode="decimal" pattern="[0-9\.',]*">
+                        <input id="formCantidad" class="formCantidad" type="number" min=1 inputmode="decimal" pattern="[0-9\.',]*">
                     </div>
                     <div class="col-md-4 col-sm-5 col-xs-10">
                         <label class="form-label" for="">De la Divisa</label>
@@ -114,6 +117,12 @@
             <p>© 2023 Copyright: All right Reserved - Carolina Contreras</p>
         </div>
     </footer>    
+
+    <!-- Toastify -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+
+    <!-- Sweet Alert -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script> 
