--- a/pages/tabla.html
+++ b/pages/tabla.html
@@ -14,10 +14,13 @@
     <!-- BT icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
+    <!-- Toastify -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+
     <!-- link CSS -->
     <link rel="stylesheet" href="../css/style.css">
     
-    <title>Divisas</title>
+    <title>Tabla de Cambios</title>
     <meta name="description" content="Conversor de moneda, cambio de divisas y convertidor para dólares, euros, pesos y otras monedas.">
     <meta name="keywords" content="conversor, convertidor, cambio, moneda, divisas, dolares, euros, pesos">
 </head>
@@ -55,20 +58,20 @@
             <form class="col-xs-12 col-md-6" id="form" name="form">
                 <div class="row">
                     <h1>Tabla de Cambio</h1>
-                    <div class="col-md-8 col-sm-8 col-xs-12">
+                    <div class="col-md-8 col-sm-8 col-xs-8">
                         <label class="form-label" for="">Cantidad</label>
-                        <input id="formCantidad" class="formCantidad" type="number" inputmode="decimal" pattern="[0-9\.',]*">
+                        <input id="formCantidad" class="formCantidad" type="number" min=1 inputmode="decimal" pattern="[0-9\.',]*">
                     </div>
                     <div class="col-md-2 col-sm-2 col-xs-2">
-                        <button type="button" id="formBtn" class="btn btn-swap">
+                        <button type="button" id="mail" class="btn btn-swap" >
                             <i class="bi bi-envelope-fill"></i>
                         </button>
                     </div>
-                    <!-- <div class="col-md-2 col-sm-2 col-xs-2">
-                        <button type="button" id="formBtn" class="btn btn-secondary btn-swap">
-                            <i class="bi bi-arrow-down-up"></i>
+                    <div class="col-md-2 col-sm-2 col-xs-2">
+                        <button type="button" id="print" class="btn btn-swap">
+                            <i class="bi bi-printer-fill"></i>
                         </button>
-                    </div> -->
+                    </div>
                     <!-- Acá se van a mostrar las cotizaciones -->
                     <div id="contenedor" >
                         <div id="exchange" style="text-align: start"></div>
@@ -92,6 +95,12 @@
             <p>© 2023 Copyright: All right Reserved - Carolina Contreras</p>
         </div>
     </footer>    
+
+    <!-- Toastify -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+
+    <!-- Sweet Alert -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script> 
