--- a/pages/tabla.html
+++ b/pages/tabla.html
@@ -63,12 +63,12 @@
                         <input id="formCantidad" class="formCantidad" type="number" min=1 inputmode="decimal" pattern="[0-9\.',]*">
                     </div>
                     <div class="col-md-2 col-sm-2 col-xs-2">
-                        <button type="button" id="mail" class="btn btn-swap" >
+                        <button type="button" id="correo" class="btn btn-swap" >
                             <i class="bi bi-envelope-fill"></i>
                         </button>
                     </div>
                     <div class="col-md-2 col-sm-2 col-xs-2">
-                        <button type="button" id="print" class="btn btn-swap">
+                        <button type="button" id="imprimir" class="btn btn-swap">
                             <i class="bi bi-printer-fill"></i>
                         </button>
                     </div>
