--- a/pages/tabla.html
+++ b/pages/tabla.html
@@ -58,6 +58,9 @@
             <form class="col-xs-12 col-md-6" id="form" name="form">
                 <div class="row">
                     <h1>Tabla de Cambio</h1>
+                    <div id="login-container">
+                        <!-- login -->
+                    </div>
                     <div class="col-md-8 col-sm-8 col-xs-8">
                         <label class="form-label" for="">Cantidad</label>
                         <input id="formCantidad" class="formCantidad" type="number" min=1 inputmode="decimal" pattern="[0-9\.',]*">
